--- a/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
+++ b/nonsmooth_rewrite/hillclimbing_nonsmooth_appendix.tex
@@ -120,13 +120,14 @@ We show that the joint optimization problem for the Elastic Net satisfies all th
 
 \subsubsection{Additive Models with Sparsity and Smoothness Penalties}
 \label{sec_appendix:sparse_add_models}
-Let 
+We use the notation in Section~\ref{sec:additive}. 
+In addition, let  $|J(\boldsymbol{\lambda})|$ be the number of elements in $J(\boldsymbol{\lambda})$. Let
 \begin{equation}
 \boldsymbol{U} = \begin{bmatrix}
 \boldsymbol {U}^{(i_1)} & ... & \boldsymbol {U}^{(i_{|J(\boldsymbol \lambda)|})}
 \end{bmatrix}
 \end{equation}
-where $i_\ell \in J(\boldsymbol \lambda)$.
+where $i_\ell \in J(\boldsymbol \lambda)$. 
 
 The gradient of the validation loss is
 \begin{equation}
@@ -142,21 +143,11 @@ The gradient of the validation loss is
 where
 \begin{equation}
 \frac{\partial}{\partial \boldsymbol{\lambda}} 
-\begin{bmatrix}
-\hat{\boldsymbol{\beta}}^{(i_1)}(\boldsymbol{\lambda})\\
-...\\
-\hat{\boldsymbol{\beta}}^{(i_{|J(\boldsymbol{\lambda})|})}(\boldsymbol{\lambda})\\
-\end{bmatrix}
+\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda})
 = 
 \boldsymbol{H}(\boldsymbol\lambda)^{-1}
 \begin{bmatrix}
-\begin{bmatrix}
-\frac{\hat{\boldsymbol{\beta}}^{(i_1)}(\boldsymbol \lambda)}{\left \| \boldsymbol {U}^{(i_1)}  \hat{\boldsymbol{\beta}}^{(i_1)} (\boldsymbol \lambda)\right \|_2}\\
-...\\
-\frac{\hat{\boldsymbol \beta}^{ 
-		\left (i_{|J(\boldsymbol{\lambda})|} \right )} (\boldsymbol \lambda)}{\left \|\boldsymbol {U}^{\left  (i_{|J(\boldsymbol{\lambda})|} \right )} 
-	\hat{\boldsymbol{\beta}}^{\left (i_{|J(\boldsymbol{\lambda})|} \right )}(\boldsymbol \lambda)\right \|_2}\\
-\end{bmatrix}
+\boldsymbol{C}_0(\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}))
 &
 \boldsymbol C \left (\hat{\boldsymbol \beta}( \boldsymbol \lambda) \right )
 \end{bmatrix}
@@ -168,15 +159,20 @@ The Hessian $\boldsymbol{H}(\boldsymbol\lambda)$ is
 \boldsymbol{H}(\boldsymbol\lambda)
 = \boldsymbol{U}^\top \boldsymbol I_T^\top \boldsymbol I_T \boldsymbol{U}
 + \lambda_0 diag  \left ( \left \{
-\frac{1}{||\boldsymbol {U}^{(i_\ell)}  \hat{\boldsymbol{\beta}}^{(i_\ell)} (\boldsymbol \lambda)||_2} \left (
-\boldsymbol I - \frac{\hat{\boldsymbol{\beta}}^{(i_\ell)} (\boldsymbol \lambda) \hat{\boldsymbol{\beta}}^{(i_\ell)\top} (\boldsymbol \lambda)}{||\boldsymbol {U}^{(i_\ell)}  \hat{\boldsymbol{\beta}}^{(i_\ell)} (\boldsymbol \lambda)||_2^2}
+\frac{1}{||\boldsymbol {U}^{(i)}  \hat{\boldsymbol{\beta}}^{(i)} (\boldsymbol \lambda)||_2} \left (
+\boldsymbol I - \frac{\hat{\boldsymbol{\beta}}^{(i)} (\boldsymbol \lambda) \hat{\boldsymbol{\beta}}^{(i)\top} (\boldsymbol \lambda)}{||\boldsymbol {U}^{(i)}  \hat{\boldsymbol{\beta}}^{(i)} (\boldsymbol \lambda)||_2^2}
 \right )
-\right \}_{i_\ell \in J(\boldsymbol{\lambda})}
+\right \}_{i \in J(\boldsymbol{\lambda})}
  \right )
 + \epsilon \boldsymbol I
 \label{eq:add_hessian}
 \end{equation}
-and $\boldsymbol C(\hat{\boldsymbol \beta}( \boldsymbol \lambda))$ has columns $i = 1,...,p$
+The vector $\boldsymbol{C}_0(\hat{\boldsymbol{\beta}}(\boldsymbol{\lambda}))$ is a vertical stack of the vectors 
+$$
+\frac{\hat{\boldsymbol{\beta}}^{(i)}(\boldsymbol \lambda)}{\left \| \boldsymbol {U}^{(i)}  \hat{\boldsymbol{\beta}}^{(i)} (\boldsymbol \lambda)\right \|_2}
+$$
+for $i \in J(\boldsymbol{\lambda})$.
+The matrix $\boldsymbol C(\hat{\boldsymbol \beta}( \boldsymbol \lambda))$ has columns $i = 1,...,p$
 \begin{equation}
 \boldsymbol{C}_i(\hat{\boldsymbol \beta}( \boldsymbol \lambda))
 = \begin{cases}
